fixed spacing and size of cards and shortened movie descriptions

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,7 @@
-.card-size {
-    width: 70% !important;
+.card {
+    height: 98%
 }
 
-.card-container {
-    align-self: center;
-}
+// .card-footer {
+//     height: 10%;
+// }
